--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+flask==3.0.0
 streamlit==1.34.0
 langchain==0.2.10
 langchain-community==0.2.9
@@ -15,4 +16,5 @@ numpy==1.26.4
 requests==2.32.3
 tqdm==4.66.
 langchain-google-genai==1.0.7
-
+googlesearch-python==1.2.3
+beautifulsoup4==4.12.3
